--- a/demos/index.html
+++ b/demos/index.html
@@ -7,6 +7,9 @@
         <!-- Optional theme -->
         <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
         
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        
         <style type="text/css">
             #democontainer {
                 overflow: hidden;
