--- a/demos/index.html
+++ b/demos/index.html
@@ -105,6 +105,7 @@
         <!-- different implementations of drawing -->
         <script src="canvas.js"></script>
         <script src="webgl.js"></script>
+        <script src="svg.js"></script>
         
         <!-- webgl-helper -->
         <script src="vendor/webgl-utils.js"></script>
