benchmark vollständig gemacht und chart auswertung eingebaut

--- a/demos/index.html
+++ b/demos/index.html
@@ -106,6 +106,12 @@
                         <p id="fps-counter"></p>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-md-4">
+                </div>
+                <div class="col-md-8" id="benchmark_chart">
+                </div>
+            </div>
         </div>
         <script src="https://code.jquery.com/jquery-2.1.0.min.js"></script>
         <!-- Latest compiled and minified JavaScript -->
@@ -122,5 +128,6 @@
         
         <!-- webgl-helper -->
         <script src="vendor/webgl-utils.js"></script>
+        <script src="vendor/chart.js"></script>
     </body>
 </html>
