präsentation svg weitergemacht

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -282,6 +282,16 @@ cEl.appendChild(circle);
                         <img src="assets/img/gravitas.png" />
                 </div>
             </div>
+            <div class="ft-page">
+                <h1>Unterstützung</h1>
+                <ul class="big-ul">
+                    <li>Sehr weit verbreitet</li>
+                    <li>IE unterstützt kein SMIL</li>
+                </ul>
+                <div class="slideshow">
+                        <img src="assets/img/svg_support.png" />
+                </div>
+            </div>
         </div>
         <!-- DOM -->
         <div class="ft-section">
