--- a/presentation/index.html
+++ b/presentation/index.html
@@ -340,7 +340,7 @@ cEl.append(imgEl);
                 <ul class="big-ul">
                     <li>Überall verwendet</li>
                     <li>ABER selten für Spiele</li>
-                    <li>Sprite.js <small>HTML-Backend neben Canvas und WebGL</small></li>
+                    <li>Bibliothek: Sprite.js <small>HTML-Backend neben Canvas und WebGL</small></li>
                 </ul>
             </div>
             <div class="ft-page">
@@ -352,6 +352,48 @@ cEl.append(imgEl);
                 <div class="slideshow">
                         <img src="assets/img/css_transforms_support.png" />
                 </div>
+            </div>
+        </div>
+        <!-- Fazit -->
+        <div class="ft-section">
+            <div class="ft-page">
+                <h1>Fazit</h1>
+                <ul class="big-ul">
+                    <li>Canvas/WebGL
+                        <ul>
+                            <li>Geeignet für Echtzeitspiele (Performance)</li>
+                            <li>Keine (nativen) komplexen Animationen</li>
+                        </ul>
+                    </li>
+                    <li>SVG/HTML5
+                        <ul>
+                            <li>Einfach zu nutzen</li>
+                            <li>Komplexe Animationen</li>
+                            <li>Überall verfügbar</li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+            <div class="ft-page">
+                <h1>Vergleich Canvas/WebGL</h1>
+                <ul class="big-ul">
+                    <li>Canvas
+                        <ul>
+                            <li>+ Einefache API</li>
+                            <li>+ Große Community</li>
+                            <li>+ Gute Unterstützung</li>
+                            <li>- Performance</li>
+                        </ul>
+                    </li>
+                    <li>WebGL
+                        <ul>
+                            <li>+ Performance</li>
+                            <li>+ Kontrolle (OpenGL-API)</li>
+                            <li>- Steile Lernkurve</li>
+                            <li>- Wenige Unterstützung auf Mobilgeräten</li>
+                        </ul>
+                    </li>
+                </ul>
             </div>
         </div>
 	</div>
