--- a/presentation/index.html
+++ b/presentation/index.html
@@ -354,6 +354,27 @@ cEl.append(imgEl);
                 </div>
             </div>
         </div>
+        <div class="ft-section">
+            <div class="ft-page">
+                <h1>Performance-Test</h1>
+                <ul class="big-ul">
+                    <li>Objekte: Position, Bewegungsvektor</li>
+                    <li>Kollision mit den Wänden</li>
+                    <li>Benchmark: Anzahl Objekte bei 30FPS</li>
+                </ul>
+                <div class="slideshow">
+                    <img src="assets/img/demo_screenshot.png" />
+                </div>
+            </div>
+            <div class="ft-page">
+                <h1>Umsetzung</h1>
+                <ul class="big-ul">
+                    <li>Logik/Spiele-Physik allgemein</li>
+                    <li>Komplett JavaScript</li>
+                    <li>Anbindung Render-Engine über Interface</li>
+                </ul>
+            </div>
+        </div>
         <!-- Fazit -->
         <div class="ft-section">
             <div class="ft-page">
@@ -379,7 +400,7 @@ cEl.append(imgEl);
                 <ul class="big-ul">
                     <li>Canvas
                         <ul>
-                            <li>+ Einefache API</li>
+                            <li>+ Einfache API</li>
                             <li>+ Große Community</li>
                             <li>+ Gute Unterstützung</li>
                             <li>- Performance</li>
@@ -391,6 +412,27 @@ cEl.append(imgEl);
                             <li>+ Kontrolle (OpenGL-API)</li>
                             <li>- Steile Lernkurve</li>
                             <li>- Wenige Unterstützung auf Mobilgeräten</li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+            <div class="ft-page">
+                <h1>Vergleich SVG/HTML5</h1>
+                <ul class="big-ul">
+                    <li>SVG
+                        <ul>
+                            <li>+ "Battletested"</li>
+                            <li>+ Gute Unterstützung</li>
+                            <li>- Performance</li>
+                            <li>- gedachte Anwendung: Graphen etc.</li>
+                        </ul>
+                    </li>
+                    <li>HTML5
+                        <ul>
+                            <li>+ CSS3 Transitions/Transforms</li>
+                            <li>+ Basics überall verfügbar</li>
+                            <li>- Großer Overhead durch DOM</li>
+                            <li>- Performance (sehr instabil)</li>
                         </ul>
                     </li>
                 </ul>
