demo in präsentation teilw. eingebunden

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -24,6 +24,49 @@
 	<link rel="stylesheet" href="css/flowtime.css">
 	<link rel="stylesheet" href="css/themes/default.css">
 	<link rel="stylesheet" href="assets/css/prism.css">
+    
+    <!-- needed for webgl-demo -->
+    <script id="2d-vertex-shader" type="x-shader/x-vertex">
+        attribute vec2 a_position;
+        attribute vec2 a_texCoord;
+
+        uniform vec2 u_resolution;
+
+        varying vec2 v_texCoord;
+
+        void main() {
+           // convert the rectangle from pixels to 0.0 to 1.0
+           vec2 zeroToOne = a_position / u_resolution;
+
+           // convert from 0->1 to 0->2
+           vec2 zeroToTwo = zeroToOne * 2.0;
+
+           // convert from 0->2 to -1->+1 (clipspace)
+           vec2 clipSpace = zeroToTwo - 1.0;
+
+           gl_Position = vec4(clipSpace * vec2(1, -1), 0, 1);
+
+           // pass the texCoord to the fragment shader
+           // The GPU will interpolate this value between points.
+           v_texCoord = a_texCoord;
+        }
+    </script>
+
+    <script id="2d-fragment-shader" type="x-shader/x-fragment">
+        #ifdef GL_ES
+            precision highp float;
+        #endif
+
+        // our texture
+        uniform sampler2D u_image;
+
+        // the texCoords passed in from the vertex shader.
+        varying vec2 v_texCoord;
+
+        void main() {
+           gl_FragColor = texture2D(u_image, v_texCoord);
+        }
+    </script>
 </head>
 <body class="">
     <div class="flowtime">
@@ -374,6 +417,22 @@ cEl.append(imgEl);
                     <li>Anbindung Render-Engine über Interface</li>
                 </ul>
             </div>
+            <div class="ft-page">
+                <h1>Demo</h1>
+                <button id="benchmark-button">Benchmark</button>
+                <button id="start-button">Start</button>
+                <div id="democontainer" style="height: 400px"></div>
+                <div id="fpscounter"></div>
+            </div>
+            <div class="ft-page">
+                <h1>Ergebnisse</h1>
+                <ul class="big-ul">
+                    <li>Canvas: 8.000</li>
+                    <li>WebGL: 100.000</li>
+                    <li>SVG: 1.200</li>
+                    <li>HTML5: 1.000</li>
+                </ul>
+            </div>
         </div>
         <!-- Fazit -->
         <div class="ft-section">
@@ -440,8 +499,10 @@ cEl.append(imgEl);
         </div>
 	</div>
 
+    <script src="js/jquery-2.1.0.min.js"></script>
 	<script src="js/brav1toolbox.js"></script>
 	<script src="js/flowtime.js"></script>
+    <script src="js/benchmarkdemo.js"></script>
 	<script src="assets/js/prism.js"></script>
 
 	<script type="text/javascript">
