--- a/presentation/index.html
+++ b/presentation/index.html
@@ -501,6 +501,13 @@ cEl.append(imgEl);
                     </li>
                 </ul>
             </div>
+            <div class="ft-page">
+                <div class="stack-center">
+					<div class="stacked-center">
+                        <h1>Vielen Dank für die Aufmerksamkeit!</h1>
+                    </div>
+                </div>
+            </div>
         </div>
 	</div>
 
