--- a/presentation/index.html
+++ b/presentation/index.html
@@ -442,7 +442,7 @@ cEl.append(imgEl);
         <!-- Fazit -->
         <div class="ft-section">
             <div class="ft-page">
-                <h1>Fazit</h1>
+                <h1>Zusammenfassung</h1>
                 <ul class="big-ul">
                     <li>Canvas/WebGL
                         <ul>
@@ -499,6 +499,14 @@ cEl.append(imgEl);
                             <li>- Performance (sehr instabil)</li>
                         </ul>
                     </li>
+                </ul>
+            </div>
+            <div class="ft-page">
+                <h1>Fazit</h1>
+                <ul class="big-ul">
+                    <li>Canvas meistens guter Kompromiss</li>
+                    <li>WebGL für erhöhte Grafik-Anforderungen</li>
+                    <li>SVG/HTML5 für Echtzeit-Spiele eher weniger geeignet</li>
                 </ul>
             </div>
             <div class="ft-page">
